presentation  ready for 17 April 2025

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_GOOGLE_MAP_KEY=AIzaSyCo2QM5XbJ36vdsRQNGaB__7Z-YTrnt0pY
+
+EXPO_PUBLIC_GOOGLE_GEMINI_API_KEY=AIzaSyCb8xY3tWU4BSq1ZA5XUYzuJ4U1ia9L8Ns
